<resources>
    <string name="app_name">Movies_Poa_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="search_movies">Search Movies...</string>
    <string name="profile">Profile</string>
    <string name="download">Download</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="favorite_icon">Add Favourite</string>
    <string name="movie_poster">Movie Image</string>
</resources>